# panel1

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  build-linux-docker.sh  build-linux.sh  build-release.sh  install.sh
.github/workflows/: ci.yml  release.yml
crates/panel-ai/: Cargo.toml
crates/panel-ai/src/: config.rs  lib.rs
crates/panel-ai/src/agents/: advisor.rs  installer.rs  mod.rs
crates/panel-ai/src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs  provider.rs
crates/panel-ai/src/tools/: diagnostic.rs  mod.rs  shell.rs
crates/panel-cli/: Cargo.toml
crates/panel-cli/src/: main.rs
crates/panel-core/: Cargo.toml
crates/panel-core/src/: lib.rs  network.rs  process.rs  service.rs  system.rs
crates/panel-docker/: Cargo.toml
crates/panel-docker/src/: compose.rs  container.rs  image.rs  lib.rs
crates/panel-service/: Cargo.toml
crates/panel-service/src/: binary.rs  lib.rs  manager.rs  systemd.rs
crates/panel-service/src/registry/: client.rs  download.rs  mod.rs
crates/panel-service/src/templates/: mod.rs  nginx.conf.template  redis.conf.template
crates/panel-tui/: Cargo.toml
crates/panel-tui/src/: app.rs  lib.rs
crates/panel-tui/src/theme/: colors.rs  mod.rs  theme.rs
crates/panel-tui/src/ui/: ai_chat.rs  ai_installer.rs  dashboard.rs  mod.rs  services.rs  settings.rs  wizard.rs
crates/panel-tui/src/ui/components/: card.rs  mod.rs  progress.rs  status_bar.rs  tabs.rs
crates/panel-web/: Cargo.toml
crates/panel-web/frontend/: index.html  package.json  vite.config.ts
crates/panel-web/frontend/src/: App.tsx
crates/panel-web/frontend/src/layouts/: MainLayout.tsx
crates/panel-web/frontend/src/lib/: api.ts  utils.ts
crates/panel-web/frontend/src/pages/: Apps.tsx  Containers.tsx  Dashboard.tsx  Files.tsx  Login.tsx  Settings.tsx  Websites.tsx
crates/panel-web/frontend/src/stores/: auth.ts
crates/panel-web/migrations/: 20240101000000_init.sql
crates/panel-web/src/: lib.rs  main.rs
crates/panel-web/src/middleware/: auth.rs
crates/panel-web/src/models/: app.rs  mod.rs  response.rs  user.rs  website.rs
crates/panel-web/src/routes/: apps.rs  auth.rs  docker.rs  files.rs  mod.rs  system.rs  websites.rs
crates/panel-web/src/services/: apps.rs  auth.rs  docker.rs  files.rs  mod.rs  static_files.rs  system.rs  websites.rs
docs/: README.md
