[workspace]
resolver = "2"
members = [
    "crates/panel-core",
    "crates/panel-docker",
    "crates/panel-web",
    "crates/panel-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Panel1 Team"]
license = "MIT"

[workspace.dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# 前端嵌入
rust-embed = "8"
mime_guess = "2"

# 系统交互
sysinfo = "0.33"

# Docker
bollard = "0.18"

# 认证
jsonwebtoken = "9"
bcrypt = "0.16"

# 工具库
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# 异步
async-trait = "0.1"
futures = "0.3"

# 验证
validator = { version = "0.18", features = ["derive"] }

# 其他
lazy_static = "1.4"
