[package]
name = "panel-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
panel-core = { path = "../panel-core" }
panel-service = { path = "../panel-service" }

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP 客户端
reqwest = { workspace = true }

# AI 相关 - 使用 genai 替代 claude-agent
genai = "0.2"

# 工具库
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
