[package]
name = "panel-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "panel1-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

panel-core = { path = "../panel-core" }
panel-docker = { path = "../panel-docker" }
