[package]
name = "panel-core"
version.workspace = true
edition.workspace = true

[dependencies]
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
