[package]
name = "panel-docker"
version.workspace = true
edition.workspace = true

[dependencies]
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
