[package]
name = "panel-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
panel-core = { path = "../panel-core" }

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP 客户端（用于下载二进制）
reqwest = { workspace = true }

# 工具库
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# 进程管理
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
