[package]
name = "panel-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "panel1"
path = "src/main.rs"

[dependencies]
# Web 框架
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 数据库
sqlx = { workspace = true, features = ["chrono"] }

# 前端嵌入
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# 认证
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# 工具库
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
lazy_static = { workspace = true }

# 内部 crates
panel-core = { path = "../panel-core" }
panel-docker = { path = "../panel-docker" }

[features]
default = []
